--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -154,6 +154,7 @@
     "no_image": "Pilt pole saadaval",
     "no_news": "Blogi postitused puuduvad",
     "no_news_subtitle": "Hetkel ei ole ühtegi blogi postitust.",
+    "no_news_description": "Proovi hiljem uuesti",
     "read_more": "Loe edasi",
     "categories": {
       "all": "Kõik",
