--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1594,11 +1594,15 @@
         "settings": "Ajakava seaded",
         "start_date": "Võistlusklassi alguskuupäev",
         "start_time": "Võistlusklassi algusaeg",
+        "concurrency_priority": "Vältida sama mängija mängimist samal ajal erinevatel laudadel",
+        "concurrency_priority_desc": "Kui turniiril on sama mängija erinevates mängudes, siis prioriteet on vältida sama mängija mängimist samal ajal erinevatel laudadel.",
+        "select_tables": "Vali võistlusklassid",
+        "global_configuration": "Globaalne konfiguratsioon",
         "match_duration": "Eeldatav mängu kestus",
         "match_duration_desc": "Eeldatav aeg mängu kohta (5-120 minutit)",
         "break_duration": "Paus mängude vahel",
         "break_duration_desc": "Puhveraeg mängude vahel (0-60 minutit)",
-        "generate": "Lisa klass ajakavasse",
+        "generate": "Uuenda Ajakava",
         "reset": "Lähtesta",
         "generating": "Genereeritakse...",
         "timetabled_tournament": "Ajakavaga võistlusklass",
