some admin panel changes

--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -971,7 +971,7 @@
         "clubs": "Klubid",
         "feedback": "Tagasiside"
       },
-      "info": "Turniiri info",
+      "info": "Info",
       "groups": "Võistlusklassid",
       "schedule": "Ajakava",
       "media": "Meedia",
