--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -862,7 +862,7 @@
           "title": "Mängija Profiil"
         },
         "rating_change_graph": {
-          "title": "Vorm"
+          "title": "Graafik"
         }
       },
       "sections": {
