--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -468,6 +468,7 @@
     }
   },
   "competitions": {
+    "all": "All",
     "details": "Details",
     "category": "Category",
     "dates": "Dates",
