--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -515,6 +515,7 @@
     }
   },
   "competitions": {
+    "all": "Kõik",
     "details": "Andmed",
     "category": "Kategooria",
     "dates": "Kuupäevad",
